# polyominos

./: .gitignore  Cargo.toml  LICENSE  README.md
html/: index.html  script.js
src/: encode.rs  gen-main.rs  generate.rs  lib.rs  pif.rs  polyomino.rs
