[package]
name = "polyominos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = ">=1.0.0"
rand = ">=0.8.5"

[[bin]]
name = "poly-gen"
path = "src/gen-main.rs"

[[bin]]
name = "poly-read"
path = "src/read-main.rs"
